current:
  * updates for Xcode 4
  * expose tracking box color

version 1.1:
  * fix doc typo (bug #3139087)
    - add modifier bit docs

version 1.0.1:
  * hotfix broken ZBarHelpController back button
  * release updates
    - update docs
  * fix support for GS1 AIs
  * fix simulated camera image orientation/scaling
  * cleanup and expose ZBarHelpController
  * expose enable for reader capture processing
  * workaround iOS 4.2 hang
    - update to use latest SDK
  * add support for Code 93 symbology

version 1.0:
  * update to SDK 4.1, clean out LLVM warnings
  * fix camera simulation gesture

version 0.1.2:
  * fix missing header dependency
  * doc enhancements
  * force controls to front when showsZBarControls is enabled
  * fix initial zoom crop (performance bug)
  * workaround iPhone quartz access past image data

version 0.1.1:
  * migrate to binary iPhone SDK distribution (NB backward incompatibilities!)
    - restructure headers

version 0.1:
  * workaround for iPhone simulator builds
    - refactor ZBarReaderView for capture/simulator specific implementations
    - fix tracking calculations
    - fix captured video frame color conversion
  * fix for poor iPhone 4 performance
  * enable torch for iPhone 4
  * fix iPhone circular ref bug
  * add iPhone cache flush, change new libs to weak refs
  * fix iPhone async ref bug
  * enhance iPhone readertest w/more options
  * add iPhone zoom support, integrate with crop
  * add iPhone OS 4.0 video capture support
    - replacement view controller for new camera reader
    - separate view for use without controller
    - separate capture delegate for use standalone
    - add continuous autofocus
  * cleanup and expose iphone help display API
  * fixes to new iphone help display
  * migrate iphone help display to integrated web page (NB resource updates!)
    - allows easier customization
    - local links open directly, external links confirm and jump out to Safari